attempt to fix issue #80